--- a/ActivityIntent/app/src/main/res/layout/activity_create_message.xml
+++ b/ActivityIntent/app/src/main/res/layout/activity_create_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app=""
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_create_message"
     android:layout_width="match_parent"
@@ -30,5 +29,15 @@
         android:layout_marginBottom="81dp"
         android:id="@+id/editText"
         android:hint="Escriba un mensaje aquí" />
+
+    <Button
+        android:text="Enviar Mensaje"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="68dp"
+        android:onClick="onCreateChooser" />
 
 </RelativeLayout>
